# VT-CS2304

./: Dockerfile  README.md  bootstrap.sh  reset.sh  start.sh  stop.sh
rock_paper_scissors/: CMakeLists.txt  README.txt  build.sh  clean.sh  deploy.sh  funds.0.expected  games.0.expected  generate_choice.sh  play_match.sh  test.sh
rock_paper_scissors/expected/: funds.0.expected  funds.player1.0.expected  funds.player2.0.expected  funds.player3.0.expected  funds.player4.0.expected  funds.player5.0.expected  games.0.expected  games.1.0.expected  games.1.expected  games.player1.0.expected  players.0.expected  players.1.expected
rock_paper_scissors/include/: rock_paper_scissors.hpp
rock_paper_scissors/src/: CMakeLists.txt  rock_paper_scissors.cpp
